tests/golden/type_errors/field_compound_non_number_value.cd
struct Counter { value: number }
let c: Counter = Counter { value: 1 };
c.value += "bad";
